edition = "2023";

import "types/invoice.proto";

package protocol.api_service.storage;

option go_package = "go-invoice-service/common/protocol/proto/apiservice/storage";

message UploadRequest {
  types.Invoice invoice = 1;
}

message UploadResponse {
  string error = 1;
}

service InvoiceStorage {
  rpc Upload (UploadRequest) returns (UploadResponse);
}