edition = "2023";

package protocol.types;

import "google/protobuf/timestamp.proto";

option go_package = "go-invoice-service/common/protocol/proto/types";

message Item {
  string description = 1;
  int32 quantity = 2;
  int64 unitPrice = 3;
  int64 total = 4;
}

message Invoice {
  string id = 1;
  string customerId = 2;
  int64 amount = 3;
  string currency = 4;
  google.protobuf.Timestamp dueDate = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  repeated Item items = 8;
  string notes = 9;
}
